src/k8s/k8s-no-internet-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: k8s-no-internet-network-policy-deny-all
  namespace: kibi9872
spec:
  podSelector:
    matchLabels:
      role: no-internet
  policyTypes:
    - Egress
  # List of egress rules is an empty array: This causes all traffic (including DNS resolution) to be dropped.
  # See: https://github.com/ahmetb/kubernetes-network-policy-recipes/blob/master/12-deny-all-non-whitelisted-traffic-from-the-namespace.md
  egress: []
